next ui, global type, style type setting

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,2 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
